--- a/AKR/AKR.vcxproj
+++ b/AKR/AKR.vcxproj
@@ -152,6 +152,9 @@
     <ClInclude Include="init.h" />
     <ClInclude Include="old.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="test.json" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
