--- a/AKR/AKR.vcxproj.filters
+++ b/AKR/AKR.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="test.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="data.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="init.h">
