--- a/AKR/AKR.vcxproj.filters
+++ b/AKR/AKR.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="data.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="maxavg.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="init.h">
@@ -60,6 +63,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="test.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="maxavg.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
