--- a/AKR/AKR.vcxproj.filters
+++ b/AKR/AKR.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="maxavg.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="taskfinish.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="init.h">
@@ -53,9 +56,6 @@
     <ClInclude Include="ann.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="old.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
     <ClInclude Include="heaphash.h">
       <Filter>头文件</Filter>
     </ClInclude>
@@ -63,6 +63,12 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="maxavg.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="funcs.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="taskfinish.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
